--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -12,26 +12,25 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-		android:theme="@style/test" >        <activity
-            android:name="com.bt.qiubai.MainActivity"
-            android:label="@string/app_name" >
-            
-        </activity>
-        
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bt.qiubai.DetailActivity"
-            android:label="@string/title_activity_detail"
-            android:theme="@style/TitleBarStyle"
+            android:name="com.bt.qiubai.MainActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
-            >
-            <intent-filter>
+            android:theme="@style/MainTitleBarStyle" >
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity
+            android:name="com.bt.qiubai.DetailActivity"
+            android:label="@string/title_activity_detail"
+            android:screenOrientation="portrait"
+            android:theme="@style/TitleBarStyle" >
+           
+        </activity>
     </application>
 
 </manifest>
