--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -36,6 +36,13 @@
             android:screenOrientation="portrait"
             android:theme="@style/CommentTitleBarStyle"
             >
+        </activity>
+        <activity 
+            android:name="com.bt.qiubai.PictureTextActivity"
+            android:label="@string/title_activity_picturetext"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar"
+            >
             
         </activity>
     </application>
