--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/MainTitleBarStyle" >
-             <intent-filter>                <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -29,20 +30,23 @@
             android:screenOrientation="portrait"
             android:theme="@style/DetailTitleBarStyle" >
         </activity>
-        <activity 
+        <activity
             android:name="com.bt.qiubai.CommentActivity"
             android:label="@string/title_activity_comment"
             android:screenOrientation="portrait"
-            android:theme="@style/CommentTitleBarStyle"
-            >
+            android:theme="@style/CommentTitleBarStyle" >
         </activity>
-        <activity 
+        <activity
             android:name="com.bt.qiubai.PictureTextActivity"
             android:label="@string/title_activity_picture_text"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar"
-            >
-
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.bt.qiubai.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:screenOrientation="portrait"
+            android:theme="@style/LoginTitleBarStyle" >
         </activity>
     </application>
 
