--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -18,11 +18,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/MainTitleBarStyle" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
         <activity
             android:name="com.bt.qiubai.DetailActivity"
@@ -48,6 +44,19 @@
             android:screenOrientation="portrait"
             android:theme="@style/LoginTitleBarStyle" >
         </activity>
+        <activity
+            android:name="com.bt.qiubai.GuideActivity"
+            android:label="@string/title_activity_guide"
+            android:screenOrientation="portrait"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        
     </application>
 
 </manifest>
