--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -18,7 +18,6 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/MainTitleBarStyle" >
-            
         </activity>
         <activity
             android:name="com.bt.qiubai.DetailActivity"
@@ -44,23 +43,22 @@
             android:screenOrientation="portrait"
             android:theme="@style/LoginTitleBarStyle" >
         </activity>
-<activity 
+        <activity
             android:name="com.bt.qiubai.RegisterActivity"
             android:label="@string/title_activity_register"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar"
-            >
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
-<activity
+        <activity
             android:name="com.bt.qiubai.GuideActivity"
             android:label="@string/title_activity_guide"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>    </application>
+        </activity>
+    </application>
 
 </manifest>
