--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -53,6 +53,11 @@
             android:name="com.bt.qiubai.GuideActivity"
             android:label="@string/title_activity_guide"
             android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.bt.qiubai.FirstEnterActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
