--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -53,6 +53,13 @@
             android:screenOrientation="portrait"
             android:theme="@style/RegisterTitleBarStyle" >
         </activity>
+        <activity 
+            android:name="com.bt.qiubai.ForgetPasswordActivity"
+            android:label="title_activity_forget_passwrod"
+            android:screenOrientation="portrait"
+            android:theme="@style/ForgetPasswrodTitleBarStyle"
+            >
+        </activity>
         <activity
             android:name="com.bt.qiubai.GuideActivity"
             android:label="@string/title_activity_guide"
