--- a/QiuBai/src/com/qiubai/properties/link.properties
+++ b/QiuBai/src/com/qiubai/properties/link.properties
@@ -8,5 +8,5 @@ register = /QiuBaiServer/rest/UserService/register
 forgetPassword = /QiuBaiServer/rest/UserService/forgetPassword
 
 **************Comment_Url**************
-publishComment = /QiuBaiServer/rest/CommentService/publishComment/
+addComment = /QiuBaiServer/rest/CommentService/addComment/
 getComments = /QiuBaiServer/rest/CommentService/getComments
