--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -72,6 +72,17 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name="com.bt.qiubai.WeatherActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.bt.qiubai.CityActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+
+        <activity
             android:name="com.bt.qiubai.FirstEnterActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
