--- a/QiuBai/src/com/qiubai/properties/link.properties
+++ b/QiuBai/src/com/qiubai/properties/link.properties
@@ -6,6 +6,8 @@ ADD_CHARACTER_SUPPORT_OPPOSE = /QiuBaiServer/rest/CharacterService/addCharacterS
 login = /QiuBaiServer/rest/UserService/login
 register = /QiuBaiServer/rest/UserService/register
 forgetPassword = /QiuBaiServer/rest/UserService/forgetPassword
+changeNickname = /QiuBaiServer/rest/UserService/changeNickname/
+changePassword = /QiuBaiServer/rest/UserService/changePassword/
 
 **************Comment_Url**************
 addComment = /QiuBaiServer/rest/CommentService/addComment/
