--- a/QiuBai/AndroidManifest.xml
+++ b/QiuBai/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name="com.bt.qiubai.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/MainTitleBarStyle" >
+            android:theme="@style/CommonTitleBarStyle" >
         </activity>
         <activity
             android:name="com.bt.qiubai.CharacterDetailActivity"
