--- a/QiuBai/src/com/qiubai/properties/link.properties
+++ b/QiuBai/src/com/qiubai/properties/link.properties
@@ -12,3 +12,8 @@ changePassword = /QiuBaiServer/rest/UserService/changePassword/
 **************Comment_Url**************
 addComment = /QiuBaiServer/rest/CommentService/addComment/
 getComments = /QiuBaiServer/rest/CommentService/getComments
+
+
+*************Picture_Fragment_Url***************
+Picture = /QiuBaiServer/rest/PictureService/getPictures
+PictureDetails = /QiuBaiServer/rest/PictureService/getPictureDetails
