--- a/QiuBai/src/com/qiubai/properties/config.properties
+++ b/QiuBai/src/com/qiubai/properties/config.properties
@@ -1,3 +1,4 @@
 protocol = http://
-ip = 192.168.1.69
-port = 8081
+ip = 192.168.1.78
+port = 8080
+userinfo_path = /data/data/com.bt.qiubai/userinfo
