--- a/QiuBai/src/com/qiubai/properties/link.properties
+++ b/QiuBai/src/com/qiubai/properties/link.properties
@@ -8,6 +8,7 @@ register = /QiuBaiServer/rest/UserService/register
 forgetPassword = /QiuBaiServer/rest/UserService/forgetPassword
 changeNickname = /QiuBaiServer/rest/UserService/changeNickname/
 changePassword = /QiuBaiServer/rest/UserService/changePassword/
+uploadIcon = /QiuBaiServer/rest/UserService/uploadIcon/
 
 **************Comment_Url**************
 addComment = /QiuBaiServer/rest/CommentService/addComment/
