--- a/QiuBai/src/com/qiubai/properties/config.properties
+++ b/QiuBai/src/com/qiubai/properties/config.properties
@@ -1,4 +1,5 @@
 protocol = http://
-ip = 192.168.1.69
-port = 8081
+ip = 192.168.1.78
+port = 8080
 userinfo_path = /data/data/com.bt.qiubai/userinfo
+header_icon_path = /data/data/com.bt.qiubai/userinfo/header_icon.png
