part of picture

--- a/QiuBai/src/com/qiubai/properties/link.properties
+++ b/QiuBai/src/com/qiubai/properties/link.properties
@@ -18,3 +18,4 @@ getComments = /QiuBaiServer/rest/CommentService/getComments
 *************Picture_Fragment_Url***************
 Picture = /QiuBaiServer/rest/PictureService/getPictures
 PictureDetails = /QiuBaiServer/rest/PictureService/getPictureDetails
+PictureById = /QiuBaiServer/rest/PictureService/getPictureById
