--- a/QiuBai/src/com/qiubai/properties/config.properties
+++ b/QiuBai/src/com/qiubai/properties/config.properties
@@ -1,5 +1,8 @@
 protocol = http://
 ip = 192.168.1.78
 port = 8080
+
+ip_tim = 192.168.1.69
+port_tim = 8081
 userinfo_path = /data/data/com.bt.qiubai/userinfo
 header_icon_path = /data/data/com.bt.qiubai/userinfo/header_icon.png
