图片的轮播

--- a/QiuBai/src/com/qiubai/properties/link.properties
+++ b/QiuBai/src/com/qiubai/properties/link.properties
@@ -19,3 +19,4 @@ getComments = /QiuBaiServer/rest/CommentService/getComments
 Picture = /QiuBaiServer/rest/PictureService/getPictures
 PictureDetails = /QiuBaiServer/rest/PictureService/getPictureDetailsLimit
 PictureById = /QiuBaiServer/rest/PictureService/getPictureById
+PictureDetailsAll = /QiuBaiServer/rest/PictureService/getPictureDetailsAll
